--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,7 +11,15 @@ body {
 
 .base-page {
   padding-top: 150px;
-  color: #fff;
+  color: #000;
+  background-color: #ecedee;
+  min-height: 100vh;
+
+  .page-header-title {
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
 }
 
 .absolute {
@@ -32,3 +40,4 @@ body {
 
 // Pages
 @import "./index";
+@import "./portfolio";
