--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .base-page {
-  padding-top: 150px;
+  padding: 150px 0;
   color: #000;
   background-color: #ecedee;
   min-height: 100vh;
