--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -59,3 +59,11 @@
     }
   }
 }
+
+.port-navbar.transparent.is-open {
+  background-color: #2c3e50;
+}
+
+.port-navbar.transparent.is-close {
+  transition: 1s;
+}
