add SEO and change page portfolio id

--- a/styles/_portfolios.scss
+++ b/styles/_portfolios.scss
@@ -28,8 +28,12 @@
       font-size: 17px;
     }
 
+    &-body {
+      min-height: 290px;
+    }
+
     &-title {
-      font-size: 30px;
+      font-size: 22px;
       font-weight: 700;
       line-height: 1.1;
       text-transform: uppercase;
