--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,8 @@
 
 // Pages
 @import "./index";
-@import "./portfolio";
+@import "./portfolios";
+@import "./portfolio_detail";
 @import "./blogs";
 @import "./about";
 
